[package]
name = "metainflux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
influxdb = { version = "0.6.0", features = ["derive"] }
parquet = "34.0.0"
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
